src/test/ui/rfcs/rfc-2008-non-exhaustive/borrowck-non-exhaustive.stderr
error[E0503]: cannot use `x` because it was mutably borrowed
  --> $DIR/borrowck-non-exhaustive.rs:13:9
   |
LL |     let y = &mut x;
   |             ------ borrow of `x` occurs here
LL |     match x {
LL |         NonExhaustiveMonovariant::Variant(_) => {},
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ use of borrowed `x`
...
LL |     drop(y);
   |          - borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0503`.
